P1 implemented and in bugfixing
